[gd_scene load_steps=2 format=3 uid="uid://c5m3ha6yilm0s"]

[ext_resource type="Script" uid="uid://bxq1w28him5nj" path="res://scripts/LevelUpPopup.gd" id="1_5alq8"]

[node name="LevelUp" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_5alq8")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.1882353)

[node name="Choice1" type="Button" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.0
offset_top = -199.0
offset_right = -170.0
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2

[node name="Choice2" type="Button" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -199.0
offset_right = 100.0
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2

[node name="Choice3" type="Button" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -199.0
offset_right = 370.0
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2
